Fix layout problem in mobile media -5

--- a/src/assets/styles/base/_reset.scss
+++ b/src/assets/styles/base/_reset.scss
@@ -51,3 +51,9 @@ a:hover,
 a:active {
   color: $secondary-color;
 }
+
+img,
+picture {
+  width: 100%;
+  height: auto;
+}
